@@ -1,3 +1,6 @@
+30-08-2019
+ - Added serial controller to turn on a strobe light when an alert is received
+
 28-08-2019
  - Fixed uploading the wrong file...
  - Changed folder structure
